# Broker-Bot

./: BrokerBot.py  license  pyproject.toml  readme.md  requirements.txt
strategy/: DollarGame.py
tools/: AccountData.py  AnalysisReporter.py  FormatSymbolPair.py  MarketReporter.py
