[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BrokerBot"
version = "0.0.1"
authors = [
  { name="Hunter Dale", email="guyyatsu@gmail.com" },
]
description = "Telegram / Alpaca interface."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "CredentialManagement"
]

[project.urls]
"Homepage" = "https://github.com/guyyatsu/Broker-Bot"
"Bug Tracker" = "https://github.com/guyyatsu/Broker-Bot/issues"
